# docs/swagger.json
@@ -1,12 +1,20 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "API pour le jeu BombParty",
+        "title": "BombParty API",
+        "contact": {},
+        "version": "1.0"
     },
+    "host": "localhost:7774",
+    "basePath": "/api/v1",
     "paths": {
         "/api/v1/bombs": {
             "get": {
                 "security": [
+                    {
+                        "ApiKeyAuth": []
+                    },
                     {
                         "BearerAuth": []
                     }
@@ -22,6 +30,15 @@
                     "Bombs"
                 ],
                 "summary": "List all bombs",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -46,6 +63,9 @@
             "post": {
                 "security": [
                     {
+                        "ApiKeyAuth": []
+                    },
+                    {
                         "BearerAuth": []
                     }
                 ],
@@ -61,6 +81,13 @@
                 ],
                 "summary": "Create a new bomb",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Bomb data",
                         "name": "bomb",
@@ -103,6 +130,9 @@
             "get": {
                 "security": [
                     {
+                        "ApiKeyAuth": []
+                    },
+                    {
                         "BearerAuth": []
                     }
                 ],
@@ -118,6 +148,13 @@
                 ],
                 "summary": "List bombs by user",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "User ID",
@@ -161,6 +198,9 @@
             "get": {
                 "security": [
                     {
+                        "ApiKeyAuth": []
+                    },
+                    {
                         "BearerAuth": []
                     }
                 ],
@@ -176,6 +216,13 @@
                 ],
                 "summary": "Get a bomb by ID",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "Bomb ID",
@@ -223,6 +270,9 @@
             "put": {
                 "security": [
                     {
+                        "ApiKeyAuth": []
+                    },
+                    {
                         "BearerAuth": []
                     }
                 ],
@@ -238,6 +288,13 @@
                 ],
                 "summary": "Update a bomb",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "Bomb ID",
@@ -294,6 +351,9 @@
             "delete": {
                 "security": [
                     {
+                        "ApiKeyAuth": []
+                    },
+                    {
                         "BearerAuth": []
                     }
                 ],
@@ -309,6 +369,13 @@
                 ],
                 "summary": "Delete a bomb",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "Bomb ID",
@@ -355,6 +422,9 @@
             "post": {
                 "security": [
                     {
+                        "ApiKeyAuth": []
+                    },
+                    {
                         "BearerAuth": []
                     }
                 ],
@@ -370,6 +440,13 @@
                 ],
                 "summary": "Create a new Game",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Game creation payload",
                         "name": "Game",
@@ -412,6 +489,9 @@
             "get": {
                 "security": [
                     {
+                        "ApiKeyAuth": []
+                    },
+                    {
                         "BearerAuth": []
                     }
                 ],
@@ -424,6 +504,13 @@
                 ],
                 "summary": "Get game by ID",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "game ID",
@@ -464,6 +551,9 @@
             "get": {
                 "security": [
                     {
+                        "ApiKeyAuth": []
+                    },
+                    {
                         "BearerAuth": []
                     }
                 ],
@@ -475,6 +565,15 @@
                     "games"
                 ],
                 "summary": "Get all games",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -501,6 +600,9 @@
             "delete": {
                 "security": [
                     {
+                        "ApiKeyAuth": []
+                    },
+                    {
                         "BearerAuth": []
                     }
                 ],
@@ -513,6 +615,13 @@
                 ],
                 "summary": "Delete a game",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "Game ID",
@@ -554,6 +663,9 @@
             "patch": {
                 "security": [
                     {
+                        "ApiKeyAuth": []
+                    },
+                    {
                         "BearerAuth": []
                     }
                 ],
@@ -569,6 +681,13 @@
                 ],
                 "summary": "Update a game",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "Game ID",
@@ -625,6 +744,11 @@
         },
         "/api/v1/teams": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Retrieve all teams",
                 "produces": [
                     "application/json"
@@ -633,6 +757,15 @@
                     "Teams"
                 ],
                 "summary": "Get all teams",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -655,6 +788,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Create a new team linked to a game",
                 "consumes": [
                     "application/json"
@@ -667,6 +805,13 @@
                 ],
                 "summary": "Create a team",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "Team payload",
                         "name": "team",
@@ -707,6 +852,11 @@
         },
         "/api/v1/teams/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Retrieve a team by its UUID",
                 "produces": [
                     "application/json"
@@ -716,6 +866,13 @@
                 ],
                 "summary": "Get team by ID",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "Team ID (UUID)",
@@ -752,6 +909,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Update an existing team",
                 "consumes": [
                     "application/json"
@@ -764,6 +926,13 @@
                 ],
                 "summary": "Update a team",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "Team ID (UUID)",
@@ -818,6 +987,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Delete a team by ID",
                 "produces": [
                     "application/json"
@@ -827,6 +1001,13 @@
                 ],
                 "summary": "Delete a team",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "Team ID (UUID)",
@@ -909,11 +1090,15 @@
         "model.BombRequest": {
             "type": "object",
             "required": [
+                "id_user",
                 "lat",
                 "long",
                 "type_bomb"
             ],
             "properties": {
+                "id_user": {
+                    "type": "integer"
+                },
                 "lat": {
                     "type": "number"
                 },
@@ -1038,6 +1223,14 @@
                     "type": "integer"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Type \"Bearer\" suivi de votre token JWT",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
